--- a/gulp-layout-digital-marketing/index.html
+++ b/gulp-layout-digital-marketing/index.html
@@ -29,11 +29,11 @@
 	<meta property="og:locale" content="ru_RU">
 	<!-- Open Graph  -->
 	<!-- plugnis -->
-	<link rel="stylesheet" href="css/libs/swiper-bundle.min.css?_v=20250418234738">
-	<link rel="stylesheet" href="css/libs/fancybox.css?_v=20250418234738">
+	<link rel="stylesheet" href="css/libs/swiper-bundle.min.css?_v=20250419115725">
+	<link rel="stylesheet" href="css/libs/fancybox.css?_v=20250419115725">
 	<!-- plugnis -->
-	<link rel="stylesheet" href="css/reset.min.css?_v=20250418234738">
-	<link rel="stylesheet" href="css/style.min.css?_v=20250418234738">
+	<link rel="stylesheet" href="css/reset.min.css?_v=20250419115725">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250419115725">
 </head>
 
 <body>
@@ -73,7 +73,11 @@
 							</div>
 						</div>
 						<div class="promo__video">
-							<video src="./files/home4-contact-video2.mp4" autoplay muted loop playsinline></video>
+							<div class="promo__video-wrapper">
+								<div class="video-area">
+									<video id="promo-video" src="./files/home4-contact-video2.mp4" autoplay muted loop playsinline></video>
+								</div>
+							</div>
 						</div>
 					</div>
 					<ul class="promo__list">
@@ -710,12 +714,12 @@
 				<div class="form__success" style="display: none;"> Спасибо! <br> Данные успешно отправлены </div>
 			</div>
 		</div> <!-- plugnis -->
-		<script src="js/libs/swiper-bundle.min.js?_v=20250418234738"></script>
-		<script src="js/libs/fancybox.umd.js?_v=20250418234738"></script>
-		<script src="js/libs/gsap.min.js?_v=20250418234738"></script>
-		<script src="js/libs/ScrollTrigger.min.js?_v=20250418234738"></script>
+		<script src="js/libs/swiper-bundle.min.js?_v=20250419115725"></script>
+		<script src="js/libs/fancybox.umd.js?_v=20250419115725"></script>
+		<script src="js/libs/gsap.min.js?_v=20250419115725"></script>
+		<script src="js/libs/ScrollTrigger.min.js?_v=20250419115725"></script>
 		<!-- plugnis -->
-		<script src="js/app.min.js?_v=20250418234738"></script>
+		<script src="js/app.min.js?_v=20250419115725"></script>
 </body>
 
 </html>
