--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,11 @@
                                 </div>
                             </div>
                             <div class="promo__video">
-                                <video src="./files/home4-contact-video2.mp4" autoplay muted loop playsinline></video>
+                                <div class="promo__video-wrapper">
+                                    <div class="video-area">
+                                        <video id="promo-video" src="./files/home4-contact-video2.mp4" autoplay muted loop playsinline></video>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <ul class="promo__list">
