--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -1,15 +1,23 @@
 <header class="header">
-    <div class="header__container">
+    <div class="header__container container-lg">
         <a href="/" class="header__logo">
             <img src="@img/logo.svg" alt="Логотип">
         </a>
         <nav class="header__menu menu" aria-label="Меню в шапке">
+            <div class="menu__logo">
+                <img src="@img/logo.svg" alt="Логотип">
+            </div>
             <ul class="menu__list">
                 <li class="menu__item"><a href="#cases" class="menu__link">Кейсы</a></li>
                 <li class="menu__item"><a href="#services" class="menu__link">Услуги</a></li>
                 <li class="menu__item"><a href="#team" class="menu__link">Команда</a></li>
                 <li class="menu__item"><a href="#contacts" class="menu__link">Контакты</a></li>
             </ul>
+            <div class="menu__btns">
+                <a href="" class="menu__btn btn btn-primary icon-right-pixel">Написать в телеграм</a>
+                <a href="" class="menu__btn btn btn-secondary icon-phone">Позвонить</a>
+            </div>
+            <div class="menu__copy">© ID-маркетинг</div>
         </nav>
         <div class="header__actions">
             <a href="" class="header__action icon-telegram"></a>
