--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
             @@include('html/_header.html', {})
             <main class="page">
                 <section class="promo">
-                    <div class="promo__container">
+                    <div class="promo__container container-lg">
                         <div class="promo__body">
                             <div class="promo__offer">
                                 <h1 class="promo__title title-xl">Digital-маркетинг для&nbsp;медицинских клиник</h1>
