--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -1,7 +1,12 @@
 <header class="header">
     <div class="header__container container-lg">
         <a href="/" class="header__logo">
+            @@if(background === 'light'){
+            <img src="@img/logo-black.svg" alt="Логотип">
+            }
+            @@if(background === 'dark'){
             <img src="@img/logo.svg" alt="Логотип">
+            }
         </a>
         <nav class="header__menu menu" aria-label="Меню в шапке">
             <div class="menu__logo">
