--- a/src/blog.html
+++ b/src/blog.html
@@ -91,6 +91,23 @@
                                 </a>
                             </li>
                         </ul>
+                        <div class="blog__pagination pagination">
+                            <a href="" class="pagination__prev" aria-disabled="true">
+                                <svg width="16" height="18" viewBox="0 0 16 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M11 14.5L5.66667 9.16667L11 3.83333" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" />
+                                </svg>
+                            </a>
+                            <a href="" class="pagination__item active">1</a>
+                            <a href="" class="pagination__item">2</a>
+                            <a href="" class="pagination__item pc-only">3</a>
+                            <span class="pagination__item">...</span>
+                            <a href="" class="pagination__item">10</a>
+                            <a href="" class="pagination__next">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="17" viewBox="0 0 16 17" fill="none">
+                                    <path d="M5.33301 3.16663L10.6663 8.49996L5.33301 13.8333" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" />
+                                </svg>
+                            </a>
+                        </div>
                     </div>
                 </section>
 
