--- a/src/html/_js.html
+++ b/src/html/_js.html
@@ -1,6 +1,7 @@
 <!-- plugnis -->
 <script src="js/libs/swiper-bundle.min.js"></script>
 <script src="js/libs/fancybox.umd.js"></script>
+<script src="js/libs/intlTelInput.min.js"></script>
 <script src="js/libs/gsap.min.js"></script>
 <script src="js/libs/ScrollTrigger.min.js"></script>
 <!-- plugnis -->
