--- a/src/html/_head.html
+++ b/src/html/_head.html
@@ -32,6 +32,7 @@
     <!-- plugnis -->
     <link rel="stylesheet" href="css/libs/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/libs/fancybox.css">
+    <link rel="stylesheet" href="css/libs/input-tel.css">
     <!-- plugnis -->
 
 
