--- a/src/index.html
+++ b/src/index.html
@@ -664,6 +664,7 @@
                 </section>
                 @@include('html/_lids.html', {
                 "hasBlog":true,
+                "hasFaq": true,
                 "hasDecor": true
                 })
             </main>
