--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -1,5 +1,5 @@
 <header class="header">
-    <div class="header__container container-lg">
+    <div class="header__container">
         <a href="/" class="header__logo">
             @@if(background === 'light'){
             <img src="@img/logo-black.svg" alt="Логотип">
@@ -16,6 +16,7 @@
                 <li class="menu__item"><a href="#cases" class="menu__link">Кейсы</a></li>
                 <li class="menu__item"><a href="#services" class="menu__link">Услуги</a></li>
                 <li class="menu__item"><a href="#team" class="menu__link">Команда</a></li>
+                <li class="menu__item"><a href="/marketplace.html" class="menu__link">Блог</a></li>
                 <li class="menu__item"><a href="#contacts" class="menu__link">Контакты</a></li>
             </ul>
             <div class="menu__btns">
