--- a/src/service.html
+++ b/src/service.html
@@ -33,7 +33,7 @@
                                     <a href="" class="promo__btn btn btn-secondary icon-phone">Позвонить</a>
                                 </div>
                             </div>
-                            <div class="promo__image">
+                            <div class="promo__image has-decor">
                                 <span class="promo__image-label">Бесплатно за 2ч</span>
                                 <img src="@img/service.jpg" class="cover-image" alt="Промо фото">
                             </div>
